--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-<h1>alive and well</h1>
+<html>
+    <title>jakanz.</title>
+    <link href="main.css" rel="stylesheet">
+    <body>
+        <div class="main">
+            <div id="top">
+                <h1>welcome to my page. how are you today?</h1>
+            </div>
+            <hr>
+            <h2 style="margin-bottom: 1px;">allow me to introduce myself.</h2>
+            <div>
+                <p style="margin-top: 6px;">
+                    you're likely unfamiliar with who i am or what i do. but i'll do my very best to explain who i am and my hobbies throughout this reading. i'll try not to talk too much about what is likely uninteresting.
+                </p>
+                <p>
+                    i'm <b>jakanz</b>, an internet microcelebrity only capable of basic tasks. if you're a hardcore primus or soad fan, you may be familiar with some of the concert footage archives i've put on my <a href="https://www.youtube.com/@jakanz" target="_blank">youtube channel</a>:
+                </p>
+                <div id="archives">
+                    <iframe width="344" height="258" src="https://www.youtube.com/embed/PiOVTfqqcqo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>  
+                    <iframe width="344" height="258" src="https://www.youtube.com/embed/XZxZ3rCFcl0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+                <p>if it isn't obvious enough, i have a bit of a situationship between me and internet archivism. is archiving old tapes of events like concerts or major tragedies, which includes 9/11. i've made my fair share of relatively important archives of this event, especially of those hard to find anywhere else:</p>
+                <div id="archives">
+                    <iframe width="344" height="258" src="https://www.youtube.com/embed/Wrq1NtjPtx0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>  
+                    <iframe width="344" height="258" src="https://www.youtube.com/embed/fqMGYOXZfOw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+            </div>
+            <hr>
+            <div class="footer">
+                <p>Website developed by jakanz. Visit the source code <a href="https://github.com/jakanz/jakanz.github.io">here</a></p>
+            </div>
+        </div>
+    </body>
+</html>
