--- a/index.html
+++ b/index.html
@@ -1,41 +1,59 @@
 <html>
     <title>jakanz.</title>
-    <link href="main.css" rel="stylesheet">
+    <head>
+        <base target="_blank">
+        <link href="main.css" rel="stylesheet">
+    </head>
     <body>
         <div class="main">
             <div id="top">
                 <h1>welcome to my page. how are you today?</h1>
             </div>
-            <hr>
-            <h2 style="margin-bottom: 1px; margin-top: 10px;">allow me to introduce myself.</h2>
+            <hr style="margin-bottom: 0.75em;">
+            <h2>allow me to introduce myself.</h2>
             <div>
-                <p style="margin-top: 4px;">
+                <p>
                     you're likely unfamiliar with who i am or what i do. but i'll do my very best to explain who i am and my hobbies throughout this reading. i'll try not to talk too much about what is likely uninteresting.<br>
                 </p>
-                <p style="margin-bottom: 1em;">
-                    i'm <b>jakanz</b>, an internet microcelebrity only capable of basic tasks. if you're a hardcore primus or soad fan, you may be familiar with some of the concert footage archives i've put on my <a href="https://www.youtube.com/@jakanz" target="_blank">youtube channel</a>:
+                <p>
+                    i'm <b>jakanz</b>, an internet microcelebrity only capable of basic tasks. if you're a hardcore primus or soad fan, you may be familiar with some of the concert footage archives i've put on my <a href="https://youtube.com/@jakanz">youtube channel</a>:
                 </p>
                 <div id="archives">
-                    <iframe width="344" height="258" src="https://www.youtube.com/embed/PiOVTfqqcqo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>  
-                    <iframe width="344" height="258" src="https://www.youtube.com/embed/XZxZ3rCFcl0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe width="344" height="258" src="https://youtube.com/embed/PiOVTfqqcqo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>  
+                    <iframe width="344" height="258" src="https://youtube.com/embed/XZxZ3rCFcl0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
-                <p style="margin-top: 1em; margin-bottom: 1em;">
+                <p>
                     if it isn't obvious enough, i have a bit of a relationship between me and internet archivism. i tend to archive old tapes of events like concerts or major tragedies, which includes 9/11. i've made my fair share of relatively important archives of this event, especially of those hard to find anywhere else:
                 </p>
                 <div id="archives">
-                    <iframe width="344" height="258" src="https://www.youtube.com/embed/Wrq1NtjPtx0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>  
-                    <iframe width="344" height="258" src="https://www.youtube.com/embed/fqMGYOXZfOw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe width="344" height="258" src="https://youtube.com/embed/Wrq1NtjPtx0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>  
+                    <iframe width="344" height="258" src="https://youtube.com/embed/fqMGYOXZfOw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
-                <p style="margin-top: 1em; margin-bottom: 5px;">
-                    other than internet archivism, i also like to speedrun random games and try to get as many world records as much as possible. i wont link them here, but you can view them on my <a href="https://www.speedrun.com/user/jakanz" target="blank">speedrun.com page</a>.<br>
-                </p>
-                <p style="margin-top: 5px;">
-                    speaking of gaming, i also like to casually play <abbr title="Counter-Strike: Global Offensive&#013;1950+ hours invested">CS:GO</abbr> and <abbr title="3400+ hours invested">minecraft</abbr>, although i sometimes play other games like <abbr title="96 hours invested">tower unite</abbr> and <abbr title="Grand Theft Auto V&#013;240+ hours invested">gtav</abbr>. however, when i'm not doing any of the above hobbies like gaming or archiving, i'm usually working on coding projects, such as the website you're on right now.
-                </p>
+                <div>
+                    <p>
+                        other than internet archivism, i also like to speedrun random games and try to get as many world records as much as possible. i wont link them here, but you can view them on my <a href="https://speedrun.com/user/jakanz">speedrun.com page</a>.<br>
+                    </p>
+                    <p>
+                        speaking of gaming, i also like to casually play <abbr title="Counter-Strike: Global Offensive&#013;1950+ hours invested">CS:GO</abbr> and <abbr title="3400+ hours invested">minecraft</abbr>, although i sometimes play other games like <abbr title="96 hours invested">tower unite</abbr> and <abbr title="Grand Theft Auto V&#013;240+ hours invested">gtav</abbr>. however, when i'm not doing any of the above hobbies like gaming or archiving, i'm usually working on coding projects, such as the website you're on right now.
+                    </p>
+                    <div>
+                        <p style="margin-bottom: 1px;">
+                            if you're interested in my other projects, please visit my <a href="https://github.com/jakanz">github page</a> or click its project link below:
+                        </p>
+                        <div id="projectlist">
+                            <p>
+                                <a href="https://github.com/jakanz/jakabot"><b>jakabot</b></a>, a discord bot that just does random shit <span><i>(still in early alpha development, don't expect this to be finished soon)</i></span><br>
+                                <a href="https://github.com/jakanz/roblox-jumper"><b>roblox-jumper</b></a>, an AutoHotkey script to prevent idle kicks on Roblox <span><i>(no idea if this is ok to use though)</i></span><br>
+                                <a href="https://github.com/jakanz/exponentiation-calc"><b>exponentiation-calc</b></a>, a calculator designed to find all exponents of a base number<br>
+                                <a href="https://github.com/jakanz/Blinmaker-3000"><b>Blinmaker-3000</b></a>, a "<a href="https://youtube.com/@LifeOfBoris">Life of Boris</a>" inspired calculator recreated in C# <span><i>(view original <a href="https://youtube.com/watch?v=FMIZEfjYmtM">here</a>)</i></span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
             <hr style="margin-top: 1em;">
             <div class="footer">
-                <p>Website developed by jakanz. Visit the source code <a href="https://github.com/jakanz/jakanz.github.io" target="_blank">here</a></p>
+                <p>All rights reserved Visit the source code <a href="https://github.com/jakanz/jakanz.github.io">here</a></p>
             </div>
         </div>
     </body>
