--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
             <hr style="margin-top: 1em;">
             <div class="footer">
-                <p>All rights reserved Visit the source code <a href="https://github.com/jakanz/jakanz.github.io">here</a></p>
+                <p>Website developed by jakanz, no rights reserved. Visit the source code <a href="https://github.com/jakanz/jakanz.github.io">here</a></p>
             </div>
         </div>
     </body>
