Added folders, 404 page, page icon

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
     <title>jakanz.</title>
     <head>
         <base target="_blank">
-        <link href="main.css" rel="stylesheet">
+        <link href="css/main.css" rel="stylesheet">
+        <link rel="icon" href="rsrc/sona.png" type="image/icon type">
     </head>
     <body>
         <div class="main">
