Absolute 404 path, added friends list, cleanup

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <div id="top">
                 <h1>welcome to my page. how are you today?</h1>
             </div>
-            <hr style="margin-bottom: 0.75em;">
+            <hr style="margin-bottom: 12px">
             <h2>allow me to introduce myself.</h2>
             <div>
                 <p>
@@ -38,7 +38,7 @@
                         speaking of gaming, i also like to casually play <abbr title="Counter-Strike: Global Offensive&#013;1950+ hours invested">CS:GO</abbr> and <abbr title="3400+ hours invested">minecraft</abbr>, although i sometimes play other games like <abbr title="96 hours invested">tower unite</abbr> and <abbr title="Grand Theft Auto V&#013;240+ hours invested">gtav</abbr>. however, when i'm not doing any of the above hobbies like gaming or archiving, i'm usually working on coding projects, such as the website you're on right now.
                     </p>
                     <div>
-                        <p style="margin-bottom: 1px;">
+                        <p style="margin-bottom: 5px;">
                             if you're interested in my other projects, please visit my <a href="https://github.com/jakanz">github page</a> or click its project link below:
                         </p>
                         <div id="projectlist">
@@ -51,10 +51,13 @@
                         </div>
                     </div>
                 </div>
+                <p>
+                    i also created an <a href="friendslist.html">online friends list</a>! you can visit it if you'd like.
+                </p>
             </div>
             <hr style="margin-top: 1em;">
             <div class="footer">
-                <p>Website developed by jakanz, no rights reserved. Visit the source code <a href="https://github.com/jakanz/jakanz.github.io">here</a></p>
+                <p>Website developed by jakanz, no rights reserved -- <a href="https://github.com/jakanz/jakanz.github.io">Source code</a></p>
             </div>
         </div>
     </body>
