Removed unnecessary html endings in hrefs

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </div>
                 </div>
                 <p>
-                    i also created an <a href="friendslist.html">online friends list</a>! you can visit it if you'd like.
+                    i also created an <a href="friendslist">online friends list</a>! you can visit it if you'd like.
                 </p>
             </div>
             <hr style="margin-top: 1em;">
