--- a/friendslist.html
+++ b/friendslist.html
@@ -1,7 +1,6 @@
 <html>
     <title>my friends</title>
     <head>
-        <base target="_blank">
         <link href="css/friendslist.css" rel="stylesheet">
         <link rel="icon" href="rsrc/mayo.png" type="image/icon type">
     </head>
@@ -12,7 +11,7 @@
                 <hr>
             </div>
             <h2>
-                <a href="friends/mayo.html">mayo, the silliest goober</a>
+                <a href="friends/mayo">mayo, the silliest goober</a>
             </h2>
             <hr style="margin-top: 1em;">
             <div class="footer">
