Massive cleanup, new friend entry
More shorthanding, cleaned up code and made it more readable. Added another friend entry (ily pap) and changed a couple details in the code to make it output the same but structurally different

--- a/friends.html
+++ b/friends.html
@@ -2,7 +2,7 @@
     <title>my friends</title>
     <head>
         <link href="css/friendslist.css" rel="stylesheet">
-        <link rel="icon" href="rsrc/mayo.png" type="image/icon type">
+        <link rel="icon" href="rsrc/heart.png" type="image/icon type">
     </head>
     <body>
         <div class="main">
@@ -11,9 +11,11 @@
                 <hr>
             </div>
             <h2>
-                <a href="friends/mayo">mayo, the silliest goober</a>
+                <a href="friends/mayo">mayo, the cutest person ever</a><br>
+                <a href="friends/pappy">chonkie, the biggest goofball</a>
             </h2>
-            <hr style="margin-top: 1em;">
+            <p class="note">(This is of course no means completed. If you would like an entry added, please contact me on Discord: <strong>jaiden#6969</strong>)</p>
+            <hr>
             <div class="footer">
                 <p>Website developed by jakanz, no rights reserved -- <a href="https://github.com/jakanz/jakanz.github.io">Source code</a></p>
             </div>
