--- a/friends/mayo.html
+++ b/friends/mayo.html
@@ -1,17 +1,17 @@
 <html>
-    <title>cutest person ever</title>
+    <title>the cutest person ever</title>
     <head>
         <base target="_blank">
-        <link href="../css/mayo.css" rel="stylesheet">
-        <link rel="icon" href="../rsrc/mayo.png" type="image/icon type">
+        <link href="../css/friend.css" rel="stylesheet">
+        <link rel="icon" href="../rsrc/friends/mayo.png" type="image/icon type">
     </head>
     <body>
         <div class="main">
             <div id="top">
-                <h1>IHATEMAYONAISEE</h1>
+                <h1 id="mayoheader">IHATEMAYONAISEE</h1>
                 <hr>
             </div>
-            <img id="mayo" src="../rsrc/mayo.png">
+            <img id="mayo" src="../rsrc/friends/mayo.png">
             <p>
                 This silly fucking goober is legitimately the funniest motherfucker on the planet. She spends most of her time playing silly ass rhythm games 
                 on Roblox, but she's INCREDIBLY fucking talented. If you saw her gameplay, your little nuts would be quakin' pal. I'm not joking when I say that
@@ -24,10 +24,10 @@
                 you'd find it hard to ever let go of such a wonderful being.
             </p>
             <p>
-                If you can, go subscribe to their <a href="https://www.youtube.com/channel/UCj-CxJYaI0y-Ca4Usky9tVw">YouTube channel</a> and follow their 
+                If you can, go subscribe to their <a href="https://www.youtube.com/@ihatemayonaise4561">YouTube channel</a> and follow their 
                 <a href="https://twitter.com/IHATEMAYONAISEE">Twitter</a>. Why? Because I said so. &lt3
             </p>
-            <hr style="margin-top: 1em;">
+            <hr style="margin-top: 1em">
             <div class="footer">
                 <p>Website developed by jakanz, no rights reserved -- <a href="https://github.com/jakanz/jakanz.github.io">Source code</a></p>
             </div>
