--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
                     </div>
                 </div>
                 <p>
-                    i also created an <a href="friendslist">online friends list</a>! you can visit it if you'd like.
+                    i also created an <a href="friends">online friends list</a>! you can visit it if you'd like.
                 </p>
             </div>
-            <hr style="margin-top: 1em;">
+            <hr style="margin-top: 1em">
             <div class="footer">
                 <p>Website developed by jakanz, no rights reserved -- <a href="https://github.com/jakanz/jakanz.github.io">Source code</a></p>
             </div>
