Updated friends list and content

--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <html>
     <title>erm...</title>
     <head>
-        <link rel="stylesheet" href="https://jakanz.github.io/css/404.css">
+        <link rel="stylesheet" href="/css/404.css" type="text/css">
         <link rel="icon" href="rsrc/sona.png" type="image/icon type">
     </head>
     <body>
