--- a/friends.html
+++ b/friends.html
@@ -1,7 +1,7 @@
 <html>
     <title>my friends</title>
     <head>
-        <link href="css/friendslist.css" rel="stylesheet">
+        <link href="css/friendslist.css" rel="stylesheet" type="text/css">
         <link rel="icon" href="rsrc/heart.png" type="image/icon type">
     </head>
     <body>
@@ -11,8 +11,11 @@
                 <hr>
             </div>
             <h2>
+                <a href="friends/alyx">alyx, the silly german girl</a>
+                <a href="friends/centuryy">centuryy, the rambunctious shapez enthusiast</a>
                 <a href="friends/mayo">mayo, the cutest person ever</a><br>
                 <a href="friends/pappy">chonkie, the biggest goofball</a>
+                <a href="friends/qwerty">qwerty, the mysterious brazilian</a>
             </h2>
             <p class="note">(This is of course no means completed. If you would like an entry added, please contact me on Discord: <strong>jaiden#6969</strong>)</p>
             <hr>
