--- a/friends/pappy.html
+++ b/friends/pappy.html
@@ -2,7 +2,7 @@
     <title>the biggest goofball</title>
     <head>
         <base target="_blank">
-        <link href="../css/friend.css" rel="stylesheet">
+        <link href="../css/friend.css" rel="stylesheet" type="text/css">
         <link rel="icon" href="../rsrc/friends/pappy.png" type="image/icon type">
     </head>
     <body>
