--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <title>jakanz.</title>
     <head>
         <base target="_blank">
-        <link href="css/main.css" rel="stylesheet">
+        <link href="css/main.css" rel="stylesheet" type="text/css">
         <link rel="icon" href="rsrc/sona.png" type="image/icon type">
     </head>
     <body>
