Friends list hotfix

--- a/friends.html
+++ b/friends.html
@@ -11,10 +11,10 @@
                 <hr>
             </div>
             <h2>
-                <a href="friends/alyx">alyx, the silly german girl</a>
-                <a href="friends/centuryy">centuryy, the rambunctious shapez enthusiast</a>
+                <a href="friends/alyx">alyx, the silly german girl</a><br>
+                <a href="friends/centuryy">centuryy, the rambunctious shapez enthusiast</a><br>
                 <a href="friends/mayo">mayo, the cutest person ever</a><br>
-                <a href="friends/pappy">chonkie, the biggest goofball</a>
+                <a href="friends/pappy">chonkie, the biggest goofball</a><br>
                 <a href="friends/qwerty">qwerty, the mysterious brazilian</a>
             </h2>
             <p class="note">(This is of course no means completed. If you would like an entry added, please contact me on Discord: <strong>jaiden#6969</strong>)</p>
