Big update - 20 changed files
Added Sara to friends list, restructured CSS files (this should've been common sense two weeks ago), reorganized pics for friends and other pics, updated footer structure and added moe-counter for domain visits, added 404 page easter egg

--- a/friends/qwerty.html
+++ b/friends/qwerty.html
@@ -8,10 +8,10 @@
     <body>
         <div class="main">
             <div id="top">
-                <h1 id="qwertyheader">ASDASDDADS (aka qwerty enthusiast)</h1>
+                <h1 class="header" style="background-image: -webkit-linear-gradient(left, #0505af, #0505ff)">ASDASDDADS (aka qwerty enthusiast)</h1>
                 <hr>
             </div>
-            <img id="qwerty" src="../rsrc/friends/qwerty.png">
+            <img class="profile" style="background-color: #0505ef" src="../rsrc/friends/qwerty.png">
             <p>
                 A really mysterious and anonymous Brazilian, yet still a good friend. I personally do not message this person on an everyday basis like some others on 
                 this list, but their hobbies and interests (usually involving technology and hardware) are still expressed every once in a while. Like centuryy, I 
@@ -24,9 +24,11 @@
                 If you can, go subscribe to their <a href="https://www.youtube.com/channel/UCFF_Le6cJawpkrqkG7dV-bA">YouTube channel</a> and 
                 follow their <a href="https://twitter.com/idontliketwit33">Twitter</a>. Why? Because I said so. &lt3
             </p>
-            <hr style="margin-top: 1em">
-            <div class="footer">
-                <p>Website developed by jakanz, no rights reserved -- <a href="https://github.com/jakanz/jakanz.github.io">Source code</a></p>
+            <div style="text-align: center">
+                <hr style="margin-top: 1em">
+                <p style="text-align: center">Website developed by jakanz, no rights reserved -- <a href="https://github.com/jakanz/jakanz.github.io">Source code</a><br><br>
+                <strong>Total visits to the jakanz.github.io domain so far:</strong></p>
+                <img style="align-content: center" src="https://count.getloli.com/get/@jakanzgithubio" alt=":name" />
             </div>
         </div>
     </body>
