--- a/404.html
+++ b/404.html
@@ -1,8 +1,8 @@
 <html>
     <title>erm...</title>
     <head>
-        <link rel="stylesheet" href="/css/404.css" type="text/css">
-        <link rel="icon" href="rsrc/sona.png" type="image/icon type">
+        <link rel="stylesheet" href="css/404.css" type="text/css">
+        <link rel="icon" href="rsrc/pics/sona.png" type="image/icon type">
     </head>
     <body>
         <div class="main">
@@ -10,6 +10,103 @@
             <p>
                 it seems you're a little lost, traveller. you can follow the path back to the <a href="index">main page</a> or<br>
                 visit the <a href="https://github.com/jakanz/jakanz.github.io">source code on github</a>. thank you for visiting this 404 page anyways. 💝
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <img src="rsrc/pics/ratstare.webp">
+                <p>cheesed to meet you</p>
             </p>
         </div>
     </body>
