--- a/friends.html
+++ b/friends.html
@@ -2,7 +2,7 @@
     <title>my friends</title>
     <head>
         <link href="css/friendslist.css" rel="stylesheet" type="text/css">
-        <link rel="icon" href="rsrc/heart.png" type="image/icon type">
+        <link rel="icon" href="rsrc/pics/heart.png" type="image/icon type">
     </head>
     <body>
         <div class="main">
@@ -13,11 +13,12 @@
             <h2>
                 <a href="friends/alyx">alyx, the silly german girl</a><br>
                 <a href="friends/centuryy">centuryy, the rambunctious shapez enthusiast</a><br>
-                <a href="friends/mayo">mayo, the cutest person ever</a><br>
+                <a href="friends/mayo">mayo, the cutest person ever (my gf!!! :3)</a><br>
                 <a href="friends/pappy">chonkie, the biggest goofball</a><br>
-                <a href="friends/qwerty">qwerty, the mysterious brazilian</a>
+                <a href="friends/qwerty">qwerty, the mysterious brazilian</a><br>
+                <a href="friends/sara">sara, the egyptian tranny</a> <span class="note">(she's fine with the slur usage dw lol)</span>
             </h2>
-            <p class="note">(This is of course no means completed. If you would like an entry added, please contact me on Discord: <strong>jaiden#6969</strong>)</p>
+            <p class="note">(This is by no means complete. If you'd like an entry added or your entry updated with information or photo, please contact me on Discord: <strong>jaiden#6969</strong>)</p>
             <hr>
             <div class="footer">
                 <p>Website developed by jakanz, no rights reserved -- <a href="https://github.com/jakanz/jakanz.github.io">Source code</a></p>
