--- a/friends/alyx.html
+++ b/friends/alyx.html
@@ -8,10 +8,10 @@
     <body>
         <div class="main">
             <div id="top">
-                <h1 id="alyxheader">ALYX (ferging!!)</h1>
+                <h1 class="header" style="background-image: -webkit-linear-gradient(left, #9649ad, #2f00a6)">ALYX (ferging!!)</h1>
                 <hr>
             </div>
-            <img id="alyx" src="../rsrc/friends/alyx.png">
+            <img class="profile" style="background-color: #3b1168" src="../rsrc/friends/alyx.png">
             <p>
                 (wip lol)
             </p>
@@ -20,9 +20,11 @@
                 their <a href="https://www.youtube.com/c/BuckiCompany">company's YouTube channel</a>, follow their <a href="https://twitter.com/snarkyalyx">personal Twitter</a>, 
                 and their <a href="https://twitter.com/BuckiCompany">company's Twitter</a>. Why? Because I said so. &lt3
             </p>
-            <hr style="margin-top: 1em">
-            <div class="footer">
-                <p>Website developed by jakanz, no rights reserved -- <a href="https://github.com/jakanz/jakanz.github.io">Source code</a></p>
+            <div style="text-align: center">
+                <hr style="margin-top: 1em">
+                <p style="text-align: center">Website developed by jakanz, no rights reserved -- <a href="https://github.com/jakanz/jakanz.github.io">Source code</a><br><br>
+                <strong>Total visits to the jakanz.github.io domain so far:</strong></p>
+                <img style="align-content: center" src="https://count.getloli.com/get/@jakanzgithubio" alt=":name" />
             </div>
         </div>
     </body>
