--- a/friends/centuryy.html
+++ b/friends/centuryy.html
@@ -8,10 +8,10 @@
     <body>
         <div class="main">
             <div id="top">
-                <h1 id="centuryyheader">CENTURYY (shapez enjoyer)</h1>
+                <h1 class="header" style="background-image: -webkit-linear-gradient(left, #ff9222, #ffd222)">CENTURYY (shapez enjoyer)</h1>
                 <hr>
             </div>
-            <img id="centuryy" src="../rsrc/friends/centuryy.png">
+            <img class="profile" style="background-color: #ffb222" src="../rsrc/friends/centuryy.png">
             <p>
                 I don't know this person that much on a personal level, but I can guarantee you that they're one of the best people and one of the most 
                 understanding when it comes to strong emotions. In terms of hobbies and interests, it's really hit and miss - some are really general like the internet, 
@@ -24,9 +24,11 @@
                 If you can, go subscribe to their <a href="https://www.youtube.com/channel/UCgF-nua8yDHtxyaqCieHQcA">YouTube channel</a> and 
                 follow their <a href="https://twitter.com/centvryy">Twitter</a>. Why? Because I said so. &lt3
             </p>
-            <hr style="margin-top: 1em">
-            <div class="footer">
-                <p>Website developed by jakanz, no rights reserved -- <a href="https://github.com/jakanz/jakanz.github.io">Source code</a></p>
+            <div style="text-align: center">
+                <hr style="margin-top: 1em">
+                <p style="text-align: center">Website developed by jakanz, no rights reserved -- <a href="https://github.com/jakanz/jakanz.github.io">Source code</a><br><br>
+                <strong>Total visits to the jakanz.github.io domain so far:</strong></p>
+                <img style="align-content: center" src="https://count.getloli.com/get/@jakanzgithubio" alt=":name" />
             </div>
         </div>
     </body>
