--- a/friends/mayo.html
+++ b/friends/mayo.html
@@ -8,10 +8,10 @@
     <body>
         <div class="main">
             <div id="top">
-                <h1 id="mayoheader">IHATEMAYONAISEE</h1>
+                <h1 class="header" style="background-image: -webkit-linear-gradient(left, #9649ad, #2f00a6)">IHATEMAYONAISEE</h1>
                 <hr>
             </div>
-            <img id="mayo" src="../rsrc/friends/mayo.png">
+            <img class="profile" style="background-color: #3b1168" src="../rsrc/friends/mayo.png">
             <p>
                 This silly fucking goober is legitimately the funniest motherfucker on the planet. She spends most of her time playing silly ass rhythm games 
                 on Roblox, but she's INCREDIBLY fucking talented. If you saw her gameplay, your little nuts would be quakin' pal. I'm not joking when I say that
@@ -27,9 +27,11 @@
                 If you can, go subscribe to their <a href="https://www.youtube.com/@ihatemayonaise4561">YouTube channel</a> and follow their 
                 <a href="https://twitter.com/IHATEMAYONAISEE">Twitter</a>. Why? Because I said so. &lt3
             </p>
-            <hr style="margin-top: 1em">
-            <div class="footer">
-                <p>Website developed by jakanz, no rights reserved -- <a href="https://github.com/jakanz/jakanz.github.io">Source code</a></p>
+            <div style="text-align: center">
+                <hr style="margin-top: 1em">
+                <p style="text-align: center">Website developed by jakanz, no rights reserved -- <a href="https://github.com/jakanz/jakanz.github.io">Source code</a><br><br>
+                <strong>Total visits to the jakanz.github.io domain so far:</strong></p>
+                <img style="align-content: center" src="https://count.getloli.com/get/@jakanzgithubio" alt=":name" />
             </div>
         </div>
     </body>
