--- a/friends/pappy.html
+++ b/friends/pappy.html
@@ -8,10 +8,10 @@
     <body>
         <div class="main">
             <div id="top">
-                <h1 id="papheader">CHONKIE (aka pappy)</h1>
+                <h1 class="header" style="background-image: -webkit-linear-gradient(left, #88074e, #fd074e)">CHONKIE (aka pappy)</h1>
                 <hr>
             </div>
-            <img id="pappy" src="../rsrc/friends/pappy.png">
+            <img class="profile" style="background-color: #f8074e" src="../rsrc/friends/pappy.png">
             <p>
                 I first met this person in July 2020 when we were both quarantined little guys trying to make the best out of a shitty situation thanks to 
                 COVID-19. We found out that we had a lot of mutual interests in gaming and memes and often agreed on a lot of the same politics, if not 
@@ -27,9 +27,11 @@
                 If you can, go subscribe to their <a href="https://www.youtube.com/@ElectricRat64">YouTube channel</a> and follow their 
                 <a href="https://twitter.com/ElectricFatRat">Twitter</a>. Why? Because I said so. &lt3
             </p>
-            <hr style="margin-top: 1em">
-            <div class="footer">
-                <p>Website developed by jakanz, no rights reserved -- <a href="https://github.com/jakanz/jakanz.github.io">Source code</a></p>
+            <div style="text-align: center">
+                <hr style="margin-top: 1em">
+                <p style="text-align: center">Website developed by jakanz, no rights reserved -- <a href="https://github.com/jakanz/jakanz.github.io">Source code</a><br><br>
+                <strong>Total visits to the jakanz.github.io domain so far:</strong></p>
+                <img style="align-content: center" src="https://count.getloli.com/get/@jakanzgithubio" alt=":name" />
             </div>
         </div>
     </body>
