--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <base target="_blank">
         <link href="css/main.css" rel="stylesheet" type="text/css">
-        <link rel="icon" href="rsrc/sona.png" type="image/icon type">
+        <link rel="icon" href="rsrc/pics/sona.png" type="image/icon type">
     </head>
     <body>
         <div class="main">
@@ -35,7 +35,7 @@
                         other than internet archivism, i also like to speedrun random games and try to get as many world records as much as possible. i wont link them here, but you can view them on my <a href="https://speedrun.com/user/jakanz">speedrun.com page</a>.<br>
                     </p>
                     <p>
-                        speaking of gaming, i also like to casually play <abbr title="Counter-Strike: Global Offensive&#013;1950+ hours invested">CS:GO</abbr> and <abbr title="3400+ hours invested">minecraft</abbr>, although i sometimes play other games like <abbr title="96 hours invested">tower unite</abbr> and <abbr title="Grand Theft Auto V&#013;240+ hours invested">gtav</abbr>. however, when i'm not doing any of the above hobbies like gaming or archiving, i'm usually working on coding projects, such as the website you're on right now.
+                        speaking of gaming, i also like to casually play <abbr title="Counter-Strike: Global Offensive&#013;2000+ hours invested">CS:GO</abbr> and <abbr title="3400+ hours invested">minecraft</abbr>, although i sometimes play other games like <abbr title="96 hours invested">tower unite</abbr> and <abbr title="Grand Theft Auto V&#013;240+ hours invested">gtav</abbr>. however, when i'm not doing any of the above hobbies like gaming or archiving, i'm usually working on coding projects, such as the website you're on right now.
                     </p>
                     <div>
                         <p style="margin-bottom: 5px;">
@@ -55,9 +55,11 @@
                     i also created an <a href="friends">online friends list</a>! you can visit it if you'd like.
                 </p>
             </div>
-            <hr style="margin-top: 1em">
-            <div class="footer">
-                <p>Website developed by jakanz, no rights reserved -- <a href="https://github.com/jakanz/jakanz.github.io">Source code</a></p>
+            <div style="text-align: center">
+                <hr style="margin-top: 1em">
+                <p style="text-align: center">Website developed by jakanz, no rights reserved -- <a href="https://github.com/jakanz/jakanz.github.io">Source code</a><br><br>
+                <strong>Total visits to the jakanz.github.io domain so far:</strong></p>
+                <img style="align-content: center" src="https://count.getloli.com/get/@jakanzgithubio" alt=":name" />
             </div>
         </div>
     </body>
