--- a/friends/alyx.html
+++ b/friends/alyx.html
@@ -22,7 +22,7 @@
             </p>
             <div style="text-align: center">
                 <hr style="margin-top: 1em">
-                <p style="text-align: center">Website developed by jakanz, no rights reserved -- <a href="https://github.com/jakanz/jakanz.github.io">Source code</a><br><br>
+                <p>Website developed by jakanz, no rights reserved -- <a href="https://github.com/jakanz/jakanz.github.io">Source code</a><br><br>
                 <strong>Total visits to the jakanz.github.io domain so far:</strong></p>
                 <img style="align-content: center" src="https://count.getloli.com/get/@jakanzgithubio" alt=":name" />
             </div>
