--- a/friends/pappy.html
+++ b/friends/pappy.html
@@ -31,7 +31,7 @@
                 <hr style="margin-top: 1em">
                 <p>Website developed by jakanz, no rights reserved -- <a href="https://github.com/jakanz/jakanz.github.io">Source code</a><br><br>
                 <strong>Total visits to the jakanz.github.io domain so far:</strong></p>
-                <img style="align-content: center" src="https://count.getloli.com/get/@jakanzgithubio" alt=":name" />
+                <img src="https://count.getloli.com/get/@jakanzgithubio?theme=gelbooru" alt="(If you see this text, moe-counter is down. Sorry.)" />
             </div>
         </div>
     </body>
