new friend on list

--- a/friends/alyx.html
+++ b/friends/alyx.html
@@ -13,7 +13,7 @@
             </div>
             <img class="profile" style="background-color: #3b1168" src="../rsrc/friends/alyx.png">
             <p>
-                (wip lol)
+                (wip lol. message me on discord if this still shows up as unfinished)
             </p>
             <p>
                 If you can, go subscribe to their <a href="https://www.youtube.com/channel/UCz1yXsvybiQCoMXTmOl_FlA">personal YouTube channel</a>, 
