--- a/friends.html
+++ b/friends.html
@@ -13,7 +13,8 @@
             <h2>
                 <a href="friends/alyx">alyx, the silly german girl</a><br>
                 <a href="friends/centuryy">centuryy, the rambunctious shapez enthusiast</a><br>
-                <a href="friends/mayo">mayo, the cutest person ever (my gf!!! :3)</a><br>
+                <a href="friends/jessica">jessica, a reunited longlost friend</a><br>
+                <a href="friends/mayo">mayo, the cutest person ever</a><br> <span class="note">(my gf!!! :3)</span>
                 <a href="friends/pappy">chonkie, the biggest goofball</a><br>
                 <a href="friends/qwerty">qwerty, the mysterious brazilian</a><br>
                 <a href="friends/sara">sara, the egyptian tranny</a> <span class="note">(she's fine with the slur usage dw lol)</span>
