update jessica page (forgor pics xD)

--- a/friends/jessica.html
+++ b/friends/jessica.html
@@ -3,7 +3,7 @@
     <head>
         <base target="_blank">
         <link href="../css/friend.css" rel="stylesheet" type="text/css">
-        <link rel="icon" href="../rsrc/friends/pappy.png" type="image/icon type">
+        <link rel="icon" href="../rsrc/friends/teshyrr.png" type="image/icon type">
     </head>
     <body>
         <div class="main">
@@ -11,7 +11,7 @@
                 <h1 class="header" style="background-image: -webkit-linear-gradient(left, #aa86aa, #ff86ff)">JESSICA (aka teshyrr)</h1>
                 <hr>
             </div>
-            <img class="profile" style="background-color: #ff86ff" src="../rsrc/friends/pappy.png">
+            <img class="profile" style="background-color: #ff86ff" src="../rsrc/friends/teshyrr.png">
             <p>
                 I honestly don't remember when or where I first met this person. It was sometime during the early months of 2021, possibly on a self-help server I 
                 joined due to my declining mental status at the time. When we met each other again on a random casual game on CS:GO two years later in June 2023, 
