leekspin + sticksfight.swf. old site got fucked by shutdown

--- a/goofs/trucksex.html
+++ b/goofs/trucksex.html
@@ -16,7 +16,7 @@
         </div>
         <script>
             slider.oninput = rangeValue;
-            function rangeValue(value){trucksex.style.opacity = (250 - this.value) / 250}
+            function rangeValue(value){trucksex.style.opacity = (250 - this.value) / 250};
         </script>
     </body>
 </html>
