updated size of swf embed

--- a/goofs/sticksfight.html
+++ b/goofs/sticksfight.html
@@ -5,6 +5,6 @@
         <script src="../ruffle/ruffle.js"></script>
     </head>
     <body>
-        <embed src="./sticksfight.swf">
+        <embed src="./sticksfight.swf" width="1100px" height="800px">
     </body>
 </html>
