i hate warnings that ruin it

--- a/goofs/sticksfight.html
+++ b/goofs/sticksfight.html
@@ -11,6 +11,7 @@
                 "autoplay": "on",
                 "backgroundColor": "#333",
                 "wmode": "transparent",
+                "warnOnUnsupportedContent": false,
                 "contextMenu": "off"
             };
             window.addEventListener("load", (event) => {
