--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         other than internet archivism, i also like to speedrun random games and try to get as many world records as much as possible. i wont link them here, but you can view them on my <a href="https://speedrun.com/user/jakanz">speedrun.com page</a>.<br>
                     </p>
                     <p>
-                        speaking of gaming, i also like to casually play <abbr title="Counter-Strike: Global Offensive&#013;2000+ hours invested">CS:GO</abbr> and <abbr title="3400+ hours invested">minecraft</abbr>, although i sometimes play other games like <abbr title="96 hours invested">tower unite</abbr> and <abbr title="Grand Theft Auto V&#013;240+ hours invested">gtav</abbr>. however, when i'm not doing any of the above hobbies like gaming or archiving, i'm usually working on coding projects, such as the website you're on right now.
+                        speaking of gaming, i also like to casually play <abbr title="Counter-Strike 2&#013;2110+ hours invested">CS2</abbr> and <abbr title="3400+ hours invested">minecraft</abbr>, although i sometimes play other games like <abbr title="129 hours invested">tower unite</abbr> and <abbr title="Grand Theft Auto V&#013;340+ hours invested">gtav</abbr>. however, when i'm not doing any of the above hobbies like gaming or archiving, i'm usually working on coding projects, such as the website you're on right now.
                     </p>
                     <div>
                         <p style="margin-bottom: 5px;">
