--- a/transgenocide.html
+++ b/transgenocide.html
@@ -10,7 +10,7 @@
             <h1>The steps of a genocide, and how it applies to <span id="transrights">transgender people</span> in the United States</h1>
             <hr style="margin-bottom: 12px; border-color:white; margin-right: 0">
             <ul>
-                <h2>Classification <span> / "Us vs Them" dynamic established - stereotypes become popular</span></h2>
+                <h2>Classification <span> / <a href="https://www.youtube.com/watch?v=HoLhKJuGhK0">"Us vs Them"</a> dynamic established - stereotypes become popular</span></h2>
                 Online chat groups and hubs like Twitter or Facebook tend to do this a lot. By launching stereotypes, you can reduce the idea of a group's existence to only stereotypical actions. This includes people who believe all transgender people cut off their penises (despite 60% of total trans people never experiencing genital dysphoria and the existence of transgender men).
                 <hr>
                 <h2>Symbolisation <span> / Visual manifestations of hatred and bigotry</span></h2>
@@ -29,7 +29,7 @@
                 This is often seen through what media publications do NOT say. While news organizations will not explicitly state their ill intentions or beliefs directly, they will communicate this by censoring or redacting information altogether to avoid playing the notes they shouldn't. One example of how this relates to transgender people is often seen in British media by publications like the BBC. Publishing articles with heavy anti-trans bias is becoming increasingly common in the UK.
                 <hr>
                 <h2>Preparation <span> / A fear of the victim group is formed - euphemisms cloak malice</span></h2>
-                <a href="https://translegislation.com">Anti-trans legislation</a> such as Idaho's "Vulnerable Child Protection Act" or New Mexico's failed "Women's Sports Protection Act" hides the malice and bigotry against transgender people behind an innocent sounding name to prevent a logically sound portion of the public or critical thinkers to determine the use of legislation like these examples.
+                <a href="https://translegislation.com">Anti-trans legislation</a> such as Idaho's <a href="https://legislature.idaho.gov/sessioninfo/2023/legislation/h0071/">"Vulnerable Child Protection Act"</a> or New Mexico's failed <a href="https://www.nmlegis.gov/Legislation/Legislation?chamber=H&legtype=B&legno=492&year=23">"Women's Sports Protection Act"</a> hides the malice and bigotry against transgender people behind an innocent sounding name to prevent a logically sound portion of the public or critical thinkers to determine the use of legislation like these examples.
                 <hr>
                 <h2>Persecution <span> / Victims are identified by symbolisation and death lists are drawn up, massacres begin - segregation, deportation, starvation, or even expropriated property</span></h2>
                 Trans people have been murdered for their identity in the past, and often it is dismissed as a one-off deal. However, with increased discrimination and inaction to prevent it, massacres will become more common. Trans people like Brianna Ghey, Caelee Love-Light, and Daniel Aston (killed in the <a href="https://en.wikipedia.org/wiki/Colorado_Springs_nightclub_shooting">Club Q massacre</a>) are unfortunately examples, as this is notable to the functioning members of society; although, for homophobes like <a href="https://www.independent.co.uk/news/world/americas/crime/anderson-lee-aldrich-colorado-springs-shooting-b2348450.html">Anderson Aldrich</a>, they <i>choose</i> to keep their eyes shut.
@@ -47,7 +47,7 @@
                 <hr style="margin-top: 1em; border-color:white">
                 <p>Website developed by jakanz, no rights reserved -- <a href="https://github.com/jakanz/jakanz.github.io">Source code</a><br><br>
                 <strong>Total visits to the jakanz.github.io domain so far:</strong></p>
-                <img src="https://count.getloli.com/get/@jakanzgithubio?theme=gelbooru" alt="(If you see this text, moe-counter is down. Sorry.)" />
+                <!--<img src="https://count.getloli.com/get/@jakanzgithubio?theme=gelbooru" alt="(If you see this text, moe-counter is down. Sorry.)" />-->
             </div>
         </div>
     </body>
