--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
         <div class="main">
             <h1>erm... there's nothing here.</h1>
             <p>
-                it seems you're a little lost, traveller. you can follow the path back to the <a href="index">main page</a> or<br>
+                it seems you're a little lost, traveller. you can follow the path back to the <a href="https://jakanz.github.io">main page</a> or<br>
                 visit the <a href="https://github.com/jakanz/jakanz.github.io">source code on github</a>. thank you for visiting this 404 page anyways. 💝
                 <br>
                 <br>
