--- a/friends.html
+++ b/friends.html
@@ -14,17 +14,16 @@
                 <a href="friends/alyx">alyx, the silly german girl</a><br>
                 <a href="friends/centuryy">centuryy, the rambunctious shapez enthusiast</a><br>
                 <a href="friends/jessica">jessica, a reunited longlost friend</a><br>
-                <a href="friends/mayo">mayo, the cutest person ever</a><br> <span class="note">(my gf!!! :3)</span>
                 <a href="friends/pappy">chonkie, the biggest goofball</a><br>
                 <a href="friends/qwerty">qwerty, the mysterious brazilian</a><br>
                 <a href="friends/sara">sara, the egyptian tranny</a> <span class="note">(she's fine with the slur usage dw lol)</span>
             </h2>
-            <p class="note">(This is by no means complete. If you'd like an entry added or updated with new information/photo, please contact me on Discord: <strong>jaiden#6969</strong>)</p>
+            <p class="note">(This is by no means complete. If you'd like an entry added or updated with new information/photo, please contact me on Discord: <strong>jakanz</strong>)</p>
             <div style="text-align: center">
                 <hr>
                 <p>Website developed by jakanz, no rights reserved -- <a href="https://github.com/jakanz/jakanz.github.io">Source code</a><br><br>
                 <strong>Total visits to the jakanz.github.io domain so far:</strong></p>
-                <img src="https://count.getloli.com/get/@jakanzgithubio?theme=gelbooru" alt="(If you see this text, moe-counter is down. Sorry.)" />
+            <img src="https://count.getloli.com/get/@jakanzgithubio?theme=gelbooru" alt="(If you see this text, moe-counter is down. Sorry.)" />
             </div>
         </div>
     </body>
