--- a/goofs/sticksfight.html
+++ b/goofs/sticksfight.html
@@ -22,6 +22,6 @@
                 player.load("../rsrc/ruffle/sticksfight.swf");
             });
         </script>
-        <script src="../rsrc/ruffle/ruffle.js" width="1100px" height="800px" />
+        <script src="../rsrc/ruffle/ruffle.js" width="1100px" height="800px"></script>
     </body>
 </html>
