--- a/goofs/sticksfight.html
+++ b/goofs/sticksfight.html
@@ -4,7 +4,7 @@
         <link href="../css/goofs/sticksfight.css" rel="stylesheet" type="text/css">
         <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
     </head>
-    <body style="padding: 0; background-color: #333">
+    <body style="padding: 0; margin: 0; background-color: #333">
         <script>
             window.RufflePlayer = window.RufflePlayer || {};
             window.RufflePlayer.config = {
