--- a/goofs/leekspin.html
+++ b/goofs/leekspin.html
@@ -2,11 +2,11 @@
     <head>
         <title>leekspin</title>
         <base target="_blank">
-        <link href="../css/goofs/leekspin.css" rel="stylesheet" type="text/css">
-        <link rel="icon" href="../rsrc/leekspin/leek.png" type="image/icon type">
+        <link href="../css/global.css" rel="stylesheet" type="text/css">
+        <link href="../rsrc/leekspin/leek.png" rel="icon" type="image/icon type">
     </head>
     <body>
-        <div class="main">
+        <div style="text-align: center; padding: 100px;">
             <embed src="../rsrc/leekspin/leekspin.gif">
             <p>You have witnessed <b id="spins">0</b> spins!</p>
         </div>
