--- a/srs/transgenocide.html
+++ b/srs/transgenocide.html
@@ -2,8 +2,9 @@
     <title>There is a genocide against transgender people in the United States | jakanz</title>
     <head>
         <base target="_blank">
-        <link href="css/transgenocide.css" rel="stylesheet" type="text/css">
-        <link rel="icon" href="rsrc\pics\heart.png" type="image/icon type">
+        <link href="../css/global.css" rel="stylesheet" type="text/css">
+        <link href="../css/srs.css" rel="stylesheet" type="text/css">
+        <link href="rsrc/pics/heart.png" rel="icon" type="image/icon type">
     </head>
     <body>
         <div class="main">
@@ -45,9 +46,7 @@
             <p style="text-align: center;  margin-top: 6px; font-size: 1.6em;"><b>jakanz says <span id="transrights">trans rights</span>. <3</b></p>
             <div style="text-align: center">
                 <hr style="margin-top: 1em; border-color:white">
-                <p>Website developed by jakanz, no rights reserved -- <a href="https://github.com/jakanz/jakanz.github.io">Source code</a><br><br>
-                <strong>Total visits to the jakanz.github.io domain so far:</strong></p>
-                <!--<img src="https://count.getloli.com/get/@jakanzgithubio?theme=gelbooru" alt="(If you see this text, moe-counter is down. Sorry.)" />-->
+                <p>Website developed by jakanz, no rights reserved -- <a href="https://github.com/jakanz/jakanz.github.io">Source code</a>
             </div>
         </div>
     </body>
