--- a/404.html
+++ b/404.html
@@ -1,13 +1,13 @@
 <html>
     <title>erm...</title>
     <head>
-        <link rel="stylesheet" href="css/404.css" type="text/css">
-        <link rel="icon" href="rsrc/pics/sona.png" type="image/icon type">
+        <link href="css/global.css" rel="stylesheet" type="text/css">
+        <link href="rsrc/pics/sona.png" rel="icon" type="image/icon type">
     </head>
     <body>
-        <div class="main">
-            <h1>erm... there's nothing here.</h1>
-            <p>
+        <div class="main" style="text-align: center;">
+            <h1 style="color: #FCD3BB; margin: 0; padding-top: 300px;">erm... there's nothing here.</h1>
+            <p style="margin-top: 6px;">
                 it seems you're a little lost, traveller. you can follow the path back to the <a href="https://jakanz.github.io">main page</a> or<br>
                 visit the <a href="https://github.com/jakanz/jakanz.github.io">source code on github</a>. thank you for visiting this 404 page anyways. 💝
                 <br>
@@ -106,7 +106,7 @@
                 <br>
                 <br>
                 <img src="rsrc/pics/ratstare.webp">
-                <p>cheesed to meet you</p>
+                <p style="margin-top: 6px;">cheesed to meet you</p>
             </p>
         </div>
     </body>
