--- a/friends/alyx.html
+++ b/friends/alyx.html
@@ -2,8 +2,9 @@
     <title>the german i know</title>
     <head>
         <base target="_blank">
+        <link href="../css/global.css" rel="stylesheet" type="text/css">
         <link href="../css/friend.css" rel="stylesheet" type="text/css">
-        <link rel="icon" href="../rsrc/friends/alyx.png" type="image/icon type">
+        <link href="../rsrc/friends/alyx.png" rel="icon" type="image/icon type">
     </head>
     <body>
         <div class="main">
@@ -16,15 +17,11 @@
                 (wip lol. message me on discord if this still shows up as unfinished)
             </p>
             <p>
-                If you can, go subscribe to their <a href="https://www.youtube.com/channel/UCz1yXsvybiQCoMXTmOl_FlA">personal YouTube channel</a>, 
-                their <a href="https://www.youtube.com/c/BuckiCompany">company's YouTube channel</a>, follow their <a href="https://twitter.com/snarkyalyx">personal Twitter</a>, 
-                and their <a href="https://twitter.com/BuckiCompany">company's Twitter</a>. Why? Because I said so. &lt3
+                If you can, go visit their <a href="https://bucki.co">company's website</a> and their <a href="https://alyx.one">personal website</a>. Why? Because I said so. &lt3
             </p>
             <div style="text-align: center">
                 <hr style="margin-top: 1em">
-                <p>Website developed by jakanz, no rights reserved -- <a href="https://github.com/jakanz/jakanz.github.io">Source code</a><br><br>
-                <strong>Total visits to the jakanz.github.io domain so far:</strong></p>
-                <img src="https://count.getloli.com/get/@jakanzgithubio?theme=gelbooru" alt="(If you see this text, moe-counter is down. Sorry.)" />
+                <p>Website developed by jakanz, no rights reserved -- <a href="https://github.com/jakanz/jakanz.github.io">Source code</a>
             </div>
         </div>
     </body>
