--- a/friends/centuryy.html
+++ b/friends/centuryy.html
@@ -2,8 +2,9 @@
     <title>kind of a goofball</title>
     <head>
         <base target="_blank">
+        <link href="../css/global.css" rel="stylesheet" type="text/css">
         <link href="../css/friend.css" rel="stylesheet" type="text/css">
-        <link rel="icon" href="../rsrc/friends/centuryy.png" type="image/icon type">
+        <link href="../rsrc/friends/centuryy.png" rel="icon" type="image/icon type">
     </head>
     <body>
         <div class="main">
@@ -26,9 +27,7 @@
             </p>
             <div style="text-align: center">
                 <hr style="margin-top: 1em">
-                <p>Website developed by jakanz, no rights reserved -- <a href="https://github.com/jakanz/jakanz.github.io">Source code</a><br><br>
-                <strong>Total visits to the jakanz.github.io domain so far:</strong></p>
-                <img src="https://count.getloli.com/get/@jakanzgithubio?theme=gelbooru" alt="(If you see this text, moe-counter is down. Sorry.)" />
+                <p>Website developed by jakanz, no rights reserved -- <a href="https://github.com/jakanz/jakanz.github.io">Source code</a>
             </div>
         </div>
     </body>
