--- a/goofs/trucksex.html
+++ b/goofs/trucksex.html
@@ -2,14 +2,14 @@
     <head>
         <title>The iconic location of the Two Trucks image</title>
         <base target="_blank">
-        <link href="../css/goofs/trucksex.css" rel="stylesheet" type="text/css">
-        <link rel="icon" href="../rsrc/trucksex/truckicon.png" type="image/icon type">
+        <link href="../css/global.css" rel="stylesheet" type="text/css">
+        <link href="../rsrc/trucksex/truckicon.png" rel="icon" type="image/icon type">
     </head>
     <body>
-        <div class="main">
+        <div class="main" style="text-align: center; padding: 150px 40px 40px">
             <div>
-                <img src="../rsrc/trucksex/trucksex.png" style="position: absolute" id="trucksex">
-                <img src="../rsrc/trucksex/todaysex.png">
+                <img src="../rsrc/trucksex/trucksex.png" style="position: absolute; width: 600px;" id="trucksex">
+                <img src="../rsrc/trucksex/todaysex.png" style="width: 600px;">
             </div>
             <input id="slider" type="range" min="0" max="250" value="0" style="width: 600px; margin: 4px 0 0 0">
             <br><br><a href="https://goo.gl/maps/DcxJxZMKog1QEhzt5">See the original Google Maps view</p>
