--- a/index.html
+++ b/index.html
@@ -2,64 +2,41 @@
     <title>jakanz.</title>
     <head>
         <base target="_blank">
-        <link href="css/main.css" rel="stylesheet" type="text/css">
-        <link rel="icon" href="rsrc/pics/sona.png" type="image/icon type">
+        <link href="css/global.css" rel="stylesheet" type="text/css">
+        <link href="css/index.css" rel="stylesheet" type="text/css">
+        <link href="rsrc/pics/sona.png" rel="icon" type="image/icon type">
     </head>
     <body>
         <div class="main">
-            <div id="top">
-                <h1>welcome to my page. how are you today?</h1>
-            </div>
+            <h1>welcome to my page. how are you today?</h1>
             <hr style="margin-bottom: 12px">
-            <h2>allow me to introduce myself.</h2>
-            <div>
+            <h2 style="margin: 0;">allow me to introduce myself.</h2>
+            <p>you're likely unfamiliar with who i am or what i do. but i'll do my very best to explain who i am and my hobbies throughout this reading. i'll try not to talk too much about what is likely uninteresting.<br></p>
+            <p>i'm <b>jakanz</b> <span>(she/her)</span>, an internet microcelebrity only capable of basic tasks. if you're a hardcore primus or soad fan, you may be familiar with some concert footage archives i've put on my <a href="https://youtube.com/@jakanz">youtube channel</a>:</p>
+            <div class="archives container">
+                <iframe width="344" height="258" src="https://youtube.com/embed/PiOVTfqqcqo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>  
+                <iframe width="344" height="258" src="https://youtube.com/embed/XZxZ3rCFcl0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+            <p>if it isn't obvious enough, i have a bit of a relationship between me and internet archivism. i tend to archive old tapes of events like concerts or major tragedies, which includes 9/11. i've made my fair share of relatively important archives of this event, especially of those hard to find anywhere else:</p>
+            <div class="archives container">
+                <iframe width="344" height="258" src="https://youtube.com/embed/Wrq1NtjPtx0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>  
+                <iframe width="344" height="258" src="https://youtube.com/embed/fqMGYOXZfOw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+            <p>other than internet archivism, i also like to speedrun random games and try to get as many world records as much as possible. i wont link them here, but you can view them on my <a href="https://speedrun.com/user/jakanz">speedrun.com page</a>.</p>
+            <p>speaking of gaming, i also like to casually play <abbr title="Counter-Strike 2&#013;2110+ hours invested">CS2</abbr> and <abbr title="3400+ hours invested">minecraft</abbr>, although i sometimes play other games like <abbr title="129 hours invested">tower unite</abbr> and <abbr title="Grand Theft Auto V&#013;340+ hours invested">gtav</abbr>. however, when i'm not doing any of the above hobbies like gaming or archiving, i'm usually working on coding projects, such as the website you're on right now.</p>
+            <p style="margin-bottom: 15px;">if you're interested in my other projects, please visit my <a href="https://github.com/jakanz">github page</a> or click its project link below:</p>
+            <div class="projectlist container">
                 <p>
-                    you're likely unfamiliar with who i am or what i do. but i'll do my very best to explain who i am and my hobbies throughout this reading. i'll try not to talk too much about what is likely uninteresting.<br>
-                </p>
-                <p>
-                    i'm <b>jakanz</b>, an internet microcelebrity only capable of basic tasks. if you're a hardcore primus or soad fan, you may be familiar with some of the concert footage archives i've put on my <a href="https://youtube.com/@jakanz">youtube channel</a>:
-                </p>
-                <div id="archives">
-                    <iframe width="344" height="258" src="https://youtube.com/embed/PiOVTfqqcqo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>  
-                    <iframe width="344" height="258" src="https://youtube.com/embed/XZxZ3rCFcl0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                </div>
-                <p>
-                    if it isn't obvious enough, i have a bit of a relationship between me and internet archivism. i tend to archive old tapes of events like concerts or major tragedies, which includes 9/11. i've made my fair share of relatively important archives of this event, especially of those hard to find anywhere else:
-                </p>
-                <div id="archives">
-                    <iframe width="344" height="258" src="https://youtube.com/embed/Wrq1NtjPtx0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>  
-                    <iframe width="344" height="258" src="https://youtube.com/embed/fqMGYOXZfOw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                </div>
-                <div>
-                    <p>
-                        other than internet archivism, i also like to speedrun random games and try to get as many world records as much as possible. i wont link them here, but you can view them on my <a href="https://speedrun.com/user/jakanz">speedrun.com page</a>.<br>
-                    </p>
-                    <p>
-                        speaking of gaming, i also like to casually play <abbr title="Counter-Strike 2&#013;2110+ hours invested">CS2</abbr> and <abbr title="3400+ hours invested">minecraft</abbr>, although i sometimes play other games like <abbr title="129 hours invested">tower unite</abbr> and <abbr title="Grand Theft Auto V&#013;340+ hours invested">gtav</abbr>. however, when i'm not doing any of the above hobbies like gaming or archiving, i'm usually working on coding projects, such as the website you're on right now.
-                    </p>
-                    <div>
-                        <p style="margin-bottom: 5px;">
-                            if you're interested in my other projects, please visit my <a href="https://github.com/jakanz">github page</a> or click its project link below:
-                        </p>
-                        <div id="projectlist">
-                            <p>
-                                <a href="https://github.com/jakanz/jakabot"><b>jakabot</b></a>, a discord bot that just does random shit <span><i>(still in early alpha development, don't expect this to be finished soon)</i></span><br>
-                                <a href="https://github.com/jakanz/roblox-jumper"><b>roblox-jumper</b></a>, an AutoHotkey script to prevent idle kicks on Roblox <span><i>(no idea if this is ok to use though)</i></span><br>
-                                <a href="https://github.com/jakanz/exponentiation-calc"><b>exponentiation-calc</b></a>, a calculator designed to find all exponents of a base number<br>
-                                <a href="https://github.com/jakanz/Blinmaker-3000"><b>Blinmaker-3000</b></a>, a "<a href="https://youtube.com/@LifeOfBoris">Life of Boris</a>" inspired calculator recreated in C# <span><i>(view original <a href="https://youtube.com/watch?v=FMIZEfjYmtM">here</a>)</i></span>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <p>
-                    i also created an <a href="friends">online friends list</a>! you can visit it if you'd like.
+                    <a href="https://github.com/jakanz/jakabot"><b>jakabot</b></a>, a discord bot that just does random shit <span>(still in early alpha development, don't expect this to be finished soon)</span><br>
+                    <a href="https://github.com/jakanz/roblox-jumper"><b>roblox-jumper</b></a>, an AutoHotkey script to prevent idle kicks on Roblox <span>(no idea if this is ok to use though)</span><br>
+                    <a href="https://github.com/jakanz/exponentiation-calc"><b>exponentiation-calc</b></a>, a calculator designed to find all exponents of a base number<br>
+                    <a href="https://github.com/jakanz/Blinmaker-3000"><b>Blinmaker-3000</b></a>, a "<a href="https://youtube.com/@LifeOfBoris">Life of Boris</a>" inspired calculator recreated in C# <span>(view original <a href="https://youtube.com/watch?v=FMIZEfjYmtM">here</a>)</span>
                 </p>
             </div>
             <div style="text-align: center">
+                <p style="font-size:3em"><a href="directory" target="_self">View website directory</a></p>
                 <hr style="margin-top: 1em">
-                <p>Website developed by jakanz, no rights reserved -- <a href="https://github.com/jakanz/jakanz.github.io">Source code</a><br><br>
-                <strong>Total visits to the jakanz.github.io domain so far:</strong></p>
-                <img src="https://count.getloli.com/get/@jakanzgithubio?theme=gelbooru" alt="(If you see this text, moe-counter is down. Sorry.)" />
+                <p>Website developed by jakanz, no rights reserved -- <a href="https://github.com/jakanz/jakanz.github.io">Source code</a>
             </div>
         </div>
     </body>
