--- a/directory.html
+++ b/directory.html
@@ -1,6 +1,7 @@
 <html>
     <title>directory</title>
     <head>
+        <base target="_blank">
         <link href="css/global.css" rel="stylesheet" type="text/css">
         <link href="css/directorystyle.css" rel="stylesheet" type="text/css">
     </head>
